dark mode toggle corrected for small screens

--- a/src/styles/_margin.scss
+++ b/src/styles/_margin.scss
@@ -111,4 +111,8 @@ $max-width: 700px;
     text-decoration: none;
     padding: 50px 5px;
   }
+
+  .bio {
+    max-width: 230px;
+  }
 }
